[project]
name = "secextend_fscan"
version = "0.1.0"
description = "secextend-fscan mcp server"
requires-python = ">=3.11"
dependencies = [ "mcp>=1.3.0",]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["SecExtend_Fscan"]
