[project]
name = "secextend_cvesearch"
version = "0.1.0"
description = "secextend-fscan mcp server"
requires-python = ">=3.11"
dependencies = [ "mcp>=1.3.0",
"meilisearch>=0.30.0",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["SecExtend_CVESearch"]
